<resources>
    <string name="app_name">Vou Casar</string>
    <string name="titulo_login">Vou Casar</string>
    <string name="text_email">  E-mail</string>
    <string name="text_senha">Senha</string>
    <string name="text_entrar">Entrar</string>
    <string name="text_cadastro">Cadastre um casamento</string>
    <string name="title_activity_activity_principal">ActivityPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_cadastro_casamento">Casamento</string>
    <string name="text_endereco_cerimonia">Endereço da cerimônia</string>
    <string name="text_nome_noivo">Nome do noivo</string>
    <string name="text_nome_noiva">Nome da noiva</string>
    <string name="text_data_casamento">Data do casamento</string>
    <string name="text_alterar_foto">Alterar foto</string>

    <string name="text_descricao">Descrição</string>
    <string name="text_valor">Valor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_senha_privada">Senha privada</string>
    <string name="text_senha_convidados">Senha dos convidados</string>
    <string name="titulo_criando_usuario">Criando novo usuário</string>

    <!--Mensagens-->
    <string name="msg_campo_nulo">Campos obrigatórios não preenchidos</string>
    <string name="msg_campo_obrigatorio">Campo obrigatório</string>
    <string name="msg_senha_igual">A senha privada não deve ser igual a senha dos convidados</string>
    <string name="titulo_alterando_usuario">Alterando usuário</string>
    <string name="titulo_criando_casamento">Criando novo casamento</string>
    <string name="text_sobrenome">Sobrenome</string>
    <string name="text_nome_convidado">Nome do convidado</string>

</resources>
