<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context="br.com.jed.voucasar.ActivityLogin">

    <RelativeLayout
        android:id="@+id/linLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linLayoutEdit"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/titulo_login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="50dp"/>

        <LinearLayout
            android:id="@+id/linLayoutEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/text_senha" />

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="196dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/text_entrar"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linLayoutEdit"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/btnCadastroCasamento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/casal"
                android:text="@string/text_cadastro"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
