<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.jed.voucasar.ActivityCadastroCasamento">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:src="@drawable/ic_voltar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_cadastro_casamento"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tbFiltro">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/tbFiltro"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnFotoCasal"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_foto"
                    android:text="Teste"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imgVwFotoCasal"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_foto"
                    android:clickable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/text_alterar_foto" />

            </LinearLayout>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_nome_noivo" />

            <EditText
                android:id="@+id/edtNomeNoivo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_noivo"
                android:inputType="text" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_nome_noiva" />

            <EditText
                android:id="@+id/edtNomeNoiva"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_favorito"
                android:inputType="text" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_data_casamento" />

            <EditText
                android:id="@+id/edtDataCasamento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_evento"
                android:inputType="date" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_endereco_cerimonia" />

            <EditText
                android:id="@+id/edtEnderecoCerimonia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_local"
                android:inputType="text" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>