<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.jed.voucasar.ActivityCadastroUsuario">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbUsuario"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.AppBarOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:fitsSystemWindows="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow
                android:id="@+id/trEmailUsuario"
                android:layout_width="fill_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/edtEmailUsuario"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_email"
                    android:inputType="text"
                    android:singleLine="true"
                    android:shadowColor="@color/colorPrimaryDark"/>
            </TableRow>

            <TableRow android:layout_width="fill_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_teclado" />

                <EditText
                    android:id="@+id/edtSenhaPrivada"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_senha_privada"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </TableRow>

            <TableRow android:layout_width="fill_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_grupo" />

                <EditText
                    android:id="@+id/edtSenhaConvidados"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_senha_convidados"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>